HTMLファイル：headerとkv追加

--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    
+    <h1 class="petlivers">Pet Livers</h1>
+
+    <!-- ヘッダー -->
+    <header>
+        <ul>
+            <li>Livers</li>
+            <li>About</li>
+            <li>Sponser</li>
+            <li>Service</li>
+            <li>Voice</li>
+            <li>Contact</li>
+            <li>Company</li>
+        </ul>
+    </header>
+
+    <!-- キーヴィジュアル -->
+    <div class="kv">
+        <!-- kvテキスト -->
+        <div class="kv-text">
+            <p class="kv-txt1">No. 1 on customer support</p>
+            <p class="kv-txt2">If you wanna be a pet liver, this is your place</p>
+            <h1 class="kv-txt3">LIVERS WALL</h1>
+            <p class="kv-txt4">An experience you won’t forget forever!</p>
+        </div>
+
+        <!--kv人物画像 -->
+        <div class="kv-person_img">
+            <div class="kv-person_img1"></div>
+            <div class="kv-person_img2"></div>
+            <div class="kv-person_img3"></div>
+            <div class="kv-person_img4"></div>
+        </div>
+
+        <!-- kv模様画像 -->
+        <div class="kv-design">
+
+        </div>
+
+    </div>
 </body>
+
 </html>
