--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 class="petlivers">Pet Livers</h1>
+    <h2 class="petlivers">Pet Livers</h2>
 
     <!-- ヘッダー -->
     <header>
@@ -36,19 +36,98 @@
         </div>
 
         <!--kv人物画像 -->
-        <div class="kv-person_img">
-            <div class="kv-person_img1"></div>
-            <div class="kv-person_img2"></div>
-            <div class="kv-person_img3"></div>
-            <div class="kv-person_img4"></div>
-        </div>
-
+           <img class="kv-person_img1" src="./img/kv01.jpg" alt="">
+           <img class="kv-person_img2" src="./img/kv_02_pc.jpg" alt="">
+           <img class="kv-person_img3" src="./img/kv_03_sp.jpg" alt="">
+           <img class="kv-person_img4" src="./img/kv_04.jpg" alt="">
         <!-- kv模様画像 -->
-        <div class="kv-design">
+        <img class="kv-design" src="./img/kv_pc.png" alt="">
 
-        </div>
+    <!-- セクションPet Livers -->
+    <section class="PetLivers">
+        <h2>Pet Livers</h2>
+        <div class="PetLivers-box">
+            <div class="PetLivers-box1">
+                <img src="./img/liver_01.jpg" alt="liver_01">
+                <p class="txtLivers">Liver</p>
+                <p class="txtName">Alice</p>
+                <p class="txtComent">There is no gain without pain</p>
+            </div>
+            <div class="PetLivers-box2">
+                <img src="./img/liver_02.jpg" alt="liver_02">
+                <p class="txtLivers">Liver</p>
+                <p class="txtName">Nancy</p>
+                <p class="txtComent">Obviously there is no better friend than my dog</p>
+            </div>
+            <div class="PetLivers-box3">
+                <img src="./img/liver_06.jpg" alt="liver_03">
+                <p class="txtLivers">Liver</p>
+                <p class="txtName">Mat</p>
+                <p class="txtComent">There is only one kind of superhero and that is my dog.</p>
 
-    </div>
+            </div>
+            <div class="PetLivers-box4">
+                <img src="./img/liver_05.jpg" alt="liver_04">
+                <p class="txtLivers">Liver</p>
+                <p class="txtName">Oscar</p>
+                <p class="txtComent">They can tell when you are lying. It is the smell of guilty.</p>
+            </div>
+            <div class="PetLivers-box5">
+                <img src="./img/liver_08.jpg" alt="liver_05">
+                <p class="txtLivers">Liver</p>
+                <p class="txtName">Nataly</p>
+                <p class="txtComent">It is totally normal to undestand your pet feelings. </p>
+            </div>
+            <div class="PetLivers-box6">
+                <img src="./img/liver_07.jpg" alt="liver_06">
+                <p class="txtLivers">Liver</p>
+                <p class="txtName">Zach</p>
+                <p class="txtComent">Hiking with my cat gives me a whole another perspective of nature</p>
+            </div>
+            <div class="PetLivers-box7">
+                <img src="./img/liver_10.jpg" alt="liver_07">
+                <p>Liver</p>
+                <p>John</p>
+                <p>My parrot is so well trained he can immitate any Hollywood star.</p>
+            </div>
+            <div class="PetLivers-box8">
+                <img src="./img/liver_09.jpg" alt="liver_08">
+                <p>Liver</p>
+                <p>Simona</p>
+                <p>She is and she will be always my first priority.</p>
+            </div>
+
+            <section class="About">
+                <h2>About</h2>
+                <p class="AboutText">About us</p>
+                <p class="AboutText-content textcontent1">
+                    We are a company that started with a simple idea of “Having fun with your pet”.
+                    As we could see, not only sharing those joyfull moments was enough for the audience. They wanted to
+                    participate, being present at the moment. That is what we made come true
+                </p>
+                <img class="About-img1" src="./img/about_01.jpg" alt="aboutimg1">
+
+                <p class="AboutText">No. 1 customer support</p>
+                <p class="AboutText-content textcontent2">
+                    We know you are not a proffesional liver.
+                    You are an animal lover and that is why we are here to support you. We have 24 hours technical
+                    support about the platform, seminars , and how you can improve your performance.
+                </p>
+                <img class="About-img2" src="./img/about_02.jpg" alt="aboutimg2">
+
+            </section>
+
+            <section class="Sponser">
+                <h2>Sponser</h2>
+                <img class="sponser-img1" src="./img/animalprotection.jpg" alt="animalprotection-img">
+                <img class="sponser-img2" src="./img/animal_foundation.jpg" alt="animalfoundation-img">
+                <p class="sponserText">Liver Wall is sponser of animal protection association.</p>
+            </section>
+
+
+
+
+    </section>
 </body>
 
 </html>
