--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./reset.css">
 </head>
 
 <body>
@@ -37,13 +37,13 @@
         </div>
 
         <!--kv人物画像 -->
-           <img class="kv-person_img1" src="./img/kv01.jpg" alt="">
-           <img class="kv-person_img2" src="./img/kv_02_pc.jpg" alt="">
-           <img class="kv-person_img3" src="./img/kv_03_sp.jpg" alt="">
-           <img class="kv-person_img4" src="./img/kv_04.jpg" alt="">
+        <img class="kv-person_img1" src="./img/kv01.jpg" alt="">
+        <img class="kv-person_img2" src="./img/kv_02_pc.jpg" alt="">
+        <img class="kv-person_img3" src="./img/kv_03_sp.jpg" alt="">
+        <img class="kv-person_img4" src="./img/kv_04.jpg" alt="">
         <!-- kv模様画像 -->
         <img class="kv-design" src="./img/kv_pc.png" alt="">
-
+    </div>
     <!-- セクションPet Livers -->
     <section class="PetLivers">
         <h2>Pet Livers</h2>
@@ -97,38 +97,205 @@
                 <p>Simona</p>
                 <p>She is and she will be always my first priority.</p>
             </div>
+    </section>
+    <section class="About">
+        <h2>About</h2>
+        <p class="AboutText">About us</p>
+        <p class="AboutText-content textcontent1">
+            We are a company that started with a simple idea of “Having fun with your pet”.
+            As we could see, not only sharing those joyfull moments was enough for the audience. They wanted to
+            participate, being present at the moment. That is what we made come true
+        </p>
+        <img class="About-img1" src="./img/about_01.jpg" alt="aboutimg1">
 
-            <section class="About">
-                <h2>About</h2>
-                <p class="AboutText">About us</p>
-                <p class="AboutText-content textcontent1">
-                    We are a company that started with a simple idea of “Having fun with your pet”.
-                    As we could see, not only sharing those joyfull moments was enough for the audience. They wanted to
-                    participate, being present at the moment. That is what we made come true
-                </p>
-                <img class="About-img1" src="./img/about_01.jpg" alt="aboutimg1">
-
-                <p class="AboutText">No. 1 customer support</p>
-                <p class="AboutText-content textcontent2">
-                    We know you are not a proffesional liver.
-                    You are an animal lover and that is why we are here to support you. We have 24 hours technical
-                    support about the platform, seminars , and how you can improve your performance.
-                </p>
-                <img class="About-img2" src="./img/about_02.jpg" alt="aboutimg2">
-
-            </section>
-
-            <section class="Sponser">
-                <h2>Sponser</h2>
-                <img class="sponser-img1" src="./img/animalprotection.jpg" alt="animalprotection-img">
-                <img class="sponser-img2" src="./img/animal_foundation.jpg" alt="animalfoundation-img">
-                <p class="sponserText">Liver Wall is sponser of animal protection association.</p>
-            </section>
-
-
-
+        <p class="AboutText">No. 1 customer support</p>
+        <p class="AboutText-content textcontent2">
+            We know you are not a proffesional liver.
+            You are an animal lover and that is why we are here to support you. We have 24 hours technical
+            support about the platform, seminars , and how you can improve your performance.
+        </p>
+        <img class="About-img2" src="./img/about_02.jpg" alt="aboutimg2">
 
     </section>
+
+    <section class="Sponser">
+        <h2>Sponser</h2>
+        <img class="sponser-img1" src="./img/animalprotection.jpg" alt="animalprotection-img">
+        <img class="sponser-img2" src="./img/animal_foundation.jpg" alt="animalfoundation-img">
+        <p class="sponserText">Liver Wall is sponser of animal protection association.</p>
+    </section>
+
+    <!-- ここから中村 -->
+    <section id="service">
+        <h2>Service</h2>
+        <div class="boxright">
+            <div>
+                <img class="boximg" src="./img/icon_01.png" alt="">
+                <h3>Do you wanna be on TV?</h3>
+                <p>We have strong connections with the <br>
+                    media so there are plenty of <br>
+                    oportunities to be famous too!</p>
+            </div>
+            <div>
+                <img class="boximg" src="./img/icon_02.png" alt="">
+                <h3>Even during the event we got your back</h3>
+                <p>You can ask for support during your live <br>
+                    session! there will for sure a response <br>
+                    within 15 minutes after your request.</p>
+            </div>
+            <div>
+                <img class="boximg" src="./img/icon_03.png" alt="">
+                <h3>Need legal support?</h3>
+                <p>We got your back here too! <br>
+                    If you are struggling paying taxes <br>
+                    or organizing your incomes, we <br>
+                    have expert lawyers and <br>
+                    accountants that can help you</p>
+            </div>
+        </div>
+        <div class="boxcenter">
+            <div>
+                <img src="./img/icon_04.png" alt="">
+                <h3>Fully support</h3>
+                <p>Your audience is not increasing as it <br>
+                    was expected? we give you free pass <br>
+                    to consult our marketing experts and <br>
+                    ask for advice</p>
+            </div>
+            <div>
+                <img src="./img/icon_05.png" alt="">
+                <h3>Connection</h3>
+                <p>You are also able to connect with <br>
+                    other livers and pets to interact with <br>
+                    them and also make new friends!</p>
+            </div>
+            <div>
+                <img src="./img/icon_06.png" alt="">
+                <h3>Customer satisfaction</h3>
+                <p>You can see the data of your <br>
+                    customer in the platform, analyze it <br>
+                    and prepare for the next session</p>
+            </div>
+
+        </div>
+        <div class="boxleft">
+            <div>
+                <img src="./img/icon_07.png" alt="">
+                <h3>Free seminar</h3>
+                <p>Every month we are holding <br>
+                    informative seminars where you can <br>
+                    get new information and also <br>
+                    improve your skills.</p>
+            </div>
+            <div>
+                <img src="./img/icon_08.png" alt="">
+                <h3>Good competition</h3>
+                <p>Everybody needs a good rival to improve <br>
+                    yourself and here you got a lot! there are <br>
+                    reviews every month where you can see the <br>
+                    ranks of your popularity and get <br>
+                    motivated.</p>
+            </div>
+            <div>
+                <img src="./img/icon_09.png" alt="">
+                <h3>Free counseling</h3>
+                <p>Whatever and whenever you have a <br>
+                    question, do not hesitate to call the <br>
+                    support center. We give fully attention <br>
+                    for 24 hours.</p>
+            </div>
+        </div>
+    </section>
+    <section id="voice">
+        <h2>Custimer Voice</h2>
+        <div class="v-container">
+            <div><img src="./img/voice_01.jpg" alt=""></div>
+            <div>
+                <p>Actual liver　Anna　</p>
+            </div>
+            <div>
+                <p>It is the best thing that <br>
+                    happened to my life</p>
+            </div>
+            <div>
+                <p>At the beggining, I wasn’t sure to put me <br>
+                    and my dog on air but after I did for the <br>
+                    first time and see all the audience willing <br>
+                    to see more and more... I was shocked! <br>
+                    I realized how much I can support someone by giving them a litle time of <br>
+                    joy. </p>
+            </div>
+
+        </div>
+    </section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <div class="c-container">
+            <div class="forclient">
+                <h2>for Client</h2>
+                <p>samplesamplesamplesamplesample <br>
+                    samplesamplesamplesamplesample</p>
+                <form action="">
+                    <div class="name"><label for="name">Name</label>
+                        <input id="name" type="text" name="yourname">
+                    </div>
+                    <div class="email"><label for="mail">Email</label>
+                        <input id="mail" type="email" name="mail">
+                    </div>
+                    <div class="tel"><label for="Tel">Tel</label>
+                        <input id="Tel" type="tel" name="tel">
+                    </div>
+                    <div class="content"><label for="content">Content</label>
+                        <textarea id="content" type="text" name="yourname"></textarea>
+                    </div>
+                    <div>
+                        <input type="button" value="submit">
+                    </div>
+                </form>
+
+            </div>
+            <div class="forliver">
+                <h2>for Liver</h2>
+                <p>Do you wanna use whatsup?<br>
+                    Click below!</p>
+                <div class="whatsapp">
+                    <img src="./img/arrow_01.png" alt="">
+                    <img src="./img/whatsapp_PNG18.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="company">
+        <h2>Company</h2>
+        <div class="company">
+            <div>
+                <h2>LIVERS WALL</h2>
+                <h3>Details</h3>
+                <p>
+                    CEO : Cat lover Jennifer <br>
+                    tel : pets.lover@liverswall.com <br>
+                    Location : San Francisco CA <br>
+                    Services : Pet liver entertainment, <br>
+                    Social experince with pets, volunteers,<br>
+                    etc
+                </p>
+            </div>
+            <div class="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.311523013411!2d127.75606202013135!3d26.316410283368153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e513051b6aba63%3A0x758d0e90af22e324!2z5YyX6LC355S6576O5rWc44Oh44OH44Kj44Ki44K544OG44O844K344On44Oz!5e0!3m2!1sja!2sjp!4v1665646742761!5m2!1sja!2sjp"
+                    width="787" height="723" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+        </div>
+    </section>
+    <footer>
+        <p>All rights reserved by Liver wall</p>
+    </footer>
+
+
+
 </body>
 
 </html>
