--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    <h2 class="petlivers">Pet Livers</h2>
+    <!-- <h2 class="petlivers">Pet Livers</h2> -->
 
     <!-- ヘッダー -->
     <header>
-        <ul>
+        <ul class="display">
             <li>Livers</li>
             <li>About</li>
             <li>Sponser</li>
@@ -31,16 +31,23 @@
         <!-- kvテキスト -->
         <div class="kv-text">
             <p class="kv-txt1">No. 1 on customer support</p>
-            <p class="kv-txt2">If you wanna be a pet liver, this is your place</p>
-            <h1 class="kv-txt3">LIVERS WALL</h1>
-            <p class="kv-txt4">An experience you won’t forget forever!</p>
+            <p class="kv-txt1">If you wanna be a pet <br> liver, this is your place</p>
+            <h1 class="kv-txt2">LIVERS WALL</h1>
+            <p class="kv-txt3">An experience you won’t forget forever!</p>
         </div>
 
-        <!--kv人物画像 -->
-        <img class="kv-person_img1" src="./img/kv01.jpg" alt="">
-        <img class="kv-person_img2" src="./img/kv_02_pc.jpg" alt="">
-        <img class="kv-person_img3" src="./img/kv_03_sp.jpg" alt="">
-        <img class="kv-person_img4" src="./img/kv_04.jpg" alt="">
+        <!--kv人物、動物画像 -->
+        <div class="kv-wrapper">
+            <div class="kvimg-content1">
+                <img class="kv-person_img3 kvimg" src="./img/kv_03_sp.jpg" alt="">
+                <img class="kv-person_img2 kvimg" src="./img/kv_02_pc.jpg" alt="">
+            </div>
+            <div class="kvimg-content2">
+                <img class="kv-person_img1 kvimg" src="./img/kv01.jpg" alt="">
+                <img class="kv-person_img4 kvimg" src="./img/kv_04.jpg" alt="">
+            </div>
+        </div>
+
         <!-- kv模様画像 -->
         <img class="kv-design" src="./img/kv_pc.png" alt="">
     </div>
@@ -48,57 +55,59 @@
     <main>
         <section class="PetLivers">
             <h2>Pet Livers</h2>
-            <div class="PetLivers-box">
-                <div class="PetLivers-box1">
+            <div class="PetLivers-content">
+                <div class="PetLivers-box box1">
                     <img src="./img/liver_01.jpg" alt="liver_01">
                     <p class="txtLivers">Liver</p>
                     <p class="txtName">Alice</p>
                     <p class="txtComent">There is no gain without pain</p>
                 </div>
-                <div class="PetLivers-box2">
+                <div class="PetLivers-box box2">
                     <img src="./img/liver_02.jpg" alt="liver_02">
                     <p class="txtLivers">Liver</p>
                     <p class="txtName">Nancy</p>
                     <p class="txtComent">Obviously there is no better friend than my dog</p>
                 </div>
-                <div class="PetLivers-box3">
+                <div class="PetLivers-box box3">
                     <img src="./img/liver_06.jpg" alt="liver_03">
                     <p class="txtLivers">Liver</p>
                     <p class="txtName">Mat</p>
                     <p class="txtComent">There is only one kind of superhero and that is my dog.</p>
 
                 </div>
-                <div class="PetLivers-box4">
+                <div class="PetLivers-box box4">
                     <img src="./img/liver_05.jpg" alt="liver_04">
                     <p class="txtLivers">Liver</p>
                     <p class="txtName">Oscar</p>
                     <p class="txtComent">They can tell when you are lying. It is the smell of guilty.</p>
                 </div>
-                <div class="PetLivers-box5">
+                <div class="PetLivers-box box5">
                     <img src="./img/liver_08.jpg" alt="liver_05">
                     <p class="txtLivers">Liver</p>
                     <p class="txtName">Nataly</p>
                     <p class="txtComent">It is totally normal to undestand your pet feelings. </p>
                 </div>
-                <div class="PetLivers-box6">
+                <div class="PetLivers-box box6">
                     <img src="./img/liver_07.jpg" alt="liver_06">
                     <p class="txtLivers">Liver</p>
                     <p class="txtName">Zach</p>
                     <p class="txtComent">Hiking with my cat gives me a whole another perspective of nature</p>
                 </div>
-                <div class="PetLivers-box7">
+                <div class="PetLivers-box box7">
                     <img src="./img/liver_10.jpg" alt="liver_07">
-                    <p>Liver</p>
-                    <p>John</p>
-                    <p>My parrot is so well trained he can immitate any Hollywood star.</p>
+                    <p class="txtLivers">Liver</p>
+                    <p class="txtName">John</p>
+                    <p class="txtComent">My parrot is so well trained he can immitate any Hollywood star.</p>
                 </div>
-                <div class="PetLivers-box8">
+                <div class="PetLivers-box box8">
                     <img src="./img/liver_09.jpg" alt="liver_08">
-                    <p>Liver</p>
-                    <p>Simona</p>
-                    <p>She is and she will be always my first priority.</p>
+                    <p class="txtLivers">Liver</p>
+                    <p class="txtName">Simona</p>
+                    <p class="txtComent">She is and she will be always my first priority.</p>
                 </div>
+            </div>
         </section>
+
         <section class="About">
             <h2>About</h2>
             <div class="display">
