--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- ヘッダー -->
     <header>
-        <ul class="display">
+        <ul class="headerlist display">
             <li>Livers</li>
             <li>About</li>
             <li>Sponser</li>
@@ -28,105 +28,124 @@
 
     <!-- キーヴィジュアル -->
     <div class="kv">
-        <!-- kvテキスト -->
-        <div class="kv-text">
-            <p class="kv-txt1">No. 1 on customer support</p>
-            <p class="kv-txt1">If you wanna be a pet <br> liver, this is your place</p>
-            <h1 class="kv-txt2">LIVERS WALL</h1>
-            <p class="kv-txt3">An experience you won’t forget forever!</p>
-        </div>
-
+        <img class="kvbgimg" src="./img/kv_pc.png" alt="">
         <!--kv人物、動物画像 -->
         <div class="kv-wrapper">
+
             <div class="kvimg-content1">
                 <img class="kv-person_img3 kvimg" src="./img/kv_03_sp.jpg" alt="">
                 <img class="kv-person_img2 kvimg" src="./img/kv_02_pc.jpg" alt="">
             </div>
+
+            <!-- kvテキスト -->
+            <div class="kv-text">
+                <p class="kv-txt1">No. 1 on customer support</p>
+                <p class="kv-txt1">If you wanna be a pet <br> liver, this is your place</p>
+                <h1 class="kv-txt2">LIVERS WALL</h1>
+                <p class="kv-txt3">An experience you won’t forget <br> forever!</p>
+            </div>
+
+
             <div class="kvimg-content2">
                 <img class="kv-person_img1 kvimg" src="./img/kv01.jpg" alt="">
                 <img class="kv-person_img4 kvimg" src="./img/kv_04.jpg" alt="">
             </div>
         </div>
-
-        <!-- kv模様画像 -->
-        <img class="kv-design" src="./img/kv_pc.png" alt="">
     </div>
+
+
     <!-- セクションPet Livers -->
     <main>
         <section class="PetLivers">
-            <h2>Pet Livers</h2>
+            <h2 class="petlivers-title">Pet Livers</h2>
             <div class="PetLivers-content">
-                <div class="PetLivers-box box1">
-                    <img src="./img/liver_01.jpg" alt="liver_01">
-                    <p class="txtLivers">Liver</p>
-                    <p class="txtName">Alice</p>
-                    <p class="txtComent">There is no gain without pain</p>
-                </div>
-                <div class="PetLivers-box box2">
-                    <img src="./img/liver_02.jpg" alt="liver_02">
-                    <p class="txtLivers">Liver</p>
-                    <p class="txtName">Nancy</p>
-                    <p class="txtComent">Obviously there is no better friend than my dog</p>
-                </div>
-                <div class="PetLivers-box box3">
-                    <img src="./img/liver_06.jpg" alt="liver_03">
-                    <p class="txtLivers">Liver</p>
-                    <p class="txtName">Mat</p>
-                    <p class="txtComent">There is only one kind of superhero and that is my dog.</p>
+                <div class="petliverswrap">
+                    <div class="PetLivers-box box1">
+                        <img src="./img/liver_01.jpg" alt="liver_01">
+                        
+                        <p class="txtLivers">Liver</p>
+                        <p class="txtName">Alice</p>
+                        <p class="txtComent">There is no gain without pain</p>
+                    </div>
+                    <div class="PetLivers-box box2">
+                        <img src="./img/liver_02.jpg" alt="liver_02">
+                        <p class="txtLivers">Liver</p>
+                        <p class="txtName">Nancy</p>
+                        <p class="txtComent">Obviously there is no better friend than my dog</p>
+                    </div>
+                    <div class="PetLivers-box box3">
+                        <img src="./img/liver_06.jpg" alt="liver_03">
+                        <p class="txtLivers">Liver</p>
+                        <p class="txtName">Mat</p>
+                        <p class="txtComent">There is only one kind of superhero and that is my dog.</p>
 
-                </div>
-                <div class="PetLivers-box box4">
-                    <img src="./img/liver_05.jpg" alt="liver_04">
-                    <p class="txtLivers">Liver</p>
-                    <p class="txtName">Oscar</p>
-                    <p class="txtComent">They can tell when you are lying. It is the smell of guilty.</p>
-                </div>
-                <div class="PetLivers-box box5">
-                    <img src="./img/liver_08.jpg" alt="liver_05">
-                    <p class="txtLivers">Liver</p>
-                    <p class="txtName">Nataly</p>
-                    <p class="txtComent">It is totally normal to undestand your pet feelings. </p>
-                </div>
-                <div class="PetLivers-box box6">
-                    <img src="./img/liver_07.jpg" alt="liver_06">
-                    <p class="txtLivers">Liver</p>
-                    <p class="txtName">Zach</p>
-                    <p class="txtComent">Hiking with my cat gives me a whole another perspective of nature</p>
-                </div>
-                <div class="PetLivers-box box7">
-                    <img src="./img/liver_10.jpg" alt="liver_07">
-                    <p class="txtLivers">Liver</p>
-                    <p class="txtName">John</p>
-                    <p class="txtComent">My parrot is so well trained he can immitate any Hollywood star.</p>
-                </div>
-                <div class="PetLivers-box box8">
-                    <img src="./img/liver_09.jpg" alt="liver_08">
-                    <p class="txtLivers">Liver</p>
-                    <p class="txtName">Simona</p>
-                    <p class="txtComent">She is and she will be always my first priority.</p>
+                    </div>
+                    <div class="PetLivers-box box4">
+                        <img src="./img/liver_05.jpg" alt="liver_04">
+                        <p class="txtLivers">Liver</p>
+                        <p class="txtName">Oscar</p>
+                        <p class="txtComent">They can tell when you are lying. It is the smell of guilty.</p>
+                    </div>
+                    <div class="PetLivers-box box5">
+                        <img src="./img/liver_08.jpg" alt="liver_05">
+                        <p class="txtLivers">Liver</p>
+                        <p class="txtName">Nataly</p>
+                        <p class="txtComent">It is totally normal to undestand your pet feelings. </p>
+                    </div>
+                    <div class="PetLivers-box box6">
+                        <img src="./img/liver_07.jpg" alt="liver_06">
+                        <p class="txtLivers">Liver</p>
+                        <p class="txtName">Zach</p>
+                        <p class="txtComent">Hiking with my cat gives me a whole another perspective of nature</p>
+                    </div>
+                    <div class="PetLivers-box box7">
+                        <img src="./img/liver_10.jpg" alt="liver_07">
+                        <p class="txtLivers">Liver</p>
+                        <p class="txtName">John</p>
+                        <p class="txtComent">My parrot is so well trained he can immitate any Hollywood star.</p>
+                    </div>
+                    <div class="PetLivers-box box8">
+                        <img src="./img/liver_09.jpg" alt="liver_08">
+                        <p class="txtLivers">Liver</p>
+                        <p class="txtName">Simona</p>
+                        <p class="txtComent">She is and she will be always my first priority.</p>
+                    </div>
                 </div>
             </div>
         </section>
 
+        <!-- セクションAbout -->
         <section class="About">
             <h2>About</h2>
             <div class="display">
-                <p class="AboutText">About us</p>
-                <p class="AboutText-content textcontent1">
-                    We are a company that started with a simple idea of “Having fun with your pet”.
-                    As we could see, not only sharing those joyfull moments was enough for the audience. They wanted to
-                    participate, being present at the moment. That is what we made come true
-                </p>
-                <img class="About-img1" src="./img/about_01.jpg" alt="aboutimg1">
+                <div class="textblock">
+                    <p class="AboutText">About us</p>
+                    <p class="AboutText-content textcontent1">
+                        We are a company that started with a <br>
+                        simple idea of “Having fun with your pet”. <br>
+                        As we could see, not only sharing those <br>
+                        joyfull moments was enough for the <br>
+                        audience. They wanted to participate, <br>
+                        being present at the moment. That is <br>
+                        what we made come true
+                    </p>
+                </div>
+                <img class="aboutimg About-img1" src="./img/about_01.jpg" alt="aboutimg1">
             </div>
+
             <div class="display">
-                <p class="AboutText">No. 1 customer support</p>
-                <p class="AboutText-content textcontent2">
-                    We know you are not a proffesional liver.
-                    You are an animal lover and that is why we are here to support you. We have 24 hours technical
-                    support about the platform, seminars , and how you can improve your performance.
-                </p>
-                <img class="About-img2" src="./img/about_02.jpg" alt="aboutimg2">
+                <img class="aboutimg About-img2" src="./img/about_02.jpg" alt="aboutimg2">
+                <div class="textblock">
+                    <p class="AboutText">No. 1 customer support</p>
+                    <p class="AboutText-content textcontent2">
+                        We know you are not a proffesional liver. <br>
+                        You are an animal lover and that is why <br>
+                        we are here to support you. We have 24 <br>
+                        hours technical support about the <br>
+                        platform, seminars , and how you can <br>
+                        improve your performance.
+                    </p>
+                </div>
             </div>
         </section>
 
