下半分追加

--- a/index.html
+++ b/index.html
@@ -156,26 +156,26 @@
             <p class="sponserText">Liver Wall is sponser of animal protection association.</p>
         </section>
 
-        <!-- ここから中村 -->
-        <section id="service">
+         <!-- ここから中村 -->
+         <section id="service">
             <h2>Service</h2>
-            <div class="display">
-                <div class="boxright">
-                    <div>
-                        <img class="boximg" src="./img/icon_01.png" alt="">
+            <div class="boxs display">
+                <div class="boxright box">
+                    <div class="imgbox">
+                        <img class="boximg " src="./img/icon_01.png" alt="">
                         <h3>Do you wanna be on TV?</h3>
                         <p>We have strong connections with the <br>
                             media so there are plenty of <br>
                             oportunities to be famous too!</p>
                     </div>
-                    <div>
+                    <div class="imgbox">
                         <img class="boximg" src="./img/icon_02.png" alt="">
                         <h3>Even during the event we got your back</h3>
                         <p>You can ask for support during your live <br>
                             session! there will for sure a response <br>
                             within 15 minutes after your request.</p>
                     </div>
-                    <div>
+                    <div class="imgbox">
                         <img class="boximg" src="./img/icon_03.png" alt="">
                         <h3>Need legal support?</h3>
                         <p>We got your back here too! <br>
@@ -185,8 +185,8 @@
                             accountants that can help you</p>
                     </div>
                 </div>
-                <div class="boxcenter">
-                    <div>
+                <div class="boxcenter box">
+                    <div class="imgbox">
                         <img src="./img/icon_04.png" alt="">
                         <h3>Fully support</h3>
                         <p>Your audience is not increasing as it <br>
@@ -194,14 +194,14 @@
                             to consult our marketing experts and <br>
                             ask for advice</p>
                     </div>
-                    <div>
+                    <div class="imgbox">
                         <img src="./img/icon_05.png" alt="">
                         <h3>Connection</h3>
                         <p>You are also able to connect with <br>
                             other livers and pets to interact with <br>
                             them and also make new friends!</p>
                     </div>
-                    <div>
+                    <div class="imgbox">
                         <img src="./img/icon_06.png" alt="">
                         <h3>Customer satisfaction</h3>
                         <p>You can see the data of your <br>
@@ -211,8 +211,8 @@
 
                 </div>
 
-                <div class="boxleft">
-                    <div>
+                <div class="boxleft box">
+                    <div class="imgbox">
                         <img src="./img/icon_07.png" alt="">
                         <h3>Free seminar</h3>
                         <p>Every month we are holding <br>
@@ -220,7 +220,7 @@
                             get new information and also <br>
                             improve your skills.</p>
                     </div>
-                    <div>
+                    <div class="imgbox">
                         <img src="./img/icon_08.png" alt="">
                         <h3>Good competition</h3>
                         <p>Everybody needs a good rival to improve <br>
@@ -229,7 +229,7 @@
                             ranks of your popularity and get <br>
                             motivated.</p>
                     </div>
-                    <div>
+                    <div class="imgbox">
                         <img src="./img/icon_09.png" alt="">
                         <h3>Free counseling</h3>
                         <p>Whatever and whenever you have a <br>
@@ -243,20 +243,23 @@
         <section id="voice">
             <h2>Custimer Voice</h2>
             <div class="v-container display">
-                <div><img src="./img/voice_01.jpg" alt=""></div>
+
+                <img src="./img/voice_01.jpg" alt="">
+
                 <div>
-                    <p>Actual liver　Anna　</p>
-                </div>
-                <div>
-                    <p>It is the best thing that <br>
+                    <p class="text1">Actual liver　Anna　</p>
+
+
+                    <p class="text2">It is the best thing that <br>
                         happened to my life</p>
-                </div>
-                <div>
-                    <p>At the beggining, I wasn’t sure to put me <br>
+
+
+                    <p class="text3">At the beggining, I wasn’t sure to put me <br>
                         and my dog on air but after I did for the <br>
                         first time and see all the audience willing <br>
                         to see more and more... I was shocked! <br>
-                        I realized how much I can support someone by giving them a litle time of <br>
+                        I realized how much I can support <br>
+                        someone by giving them a litle time of <br>
                         joy. </p>
                 </div>
 
@@ -265,36 +268,36 @@
         <section id="contact">
             <h2>Contact</h2>
             <div class="c-container display">
-                <div class="forclient">
+                <div class="forclient for">
                     <h2>for Client</h2>
                     <p>samplesamplesamplesamplesample <br>
                         samplesamplesamplesamplesample</p>
                     <form action="">
-                        <div class="name"><label for="name">Name</label>
-                            <input id="name" type="text" name="yourname">
+                        <div class="name font"><label for="name">Name</label>
+                            <input class="area" id="name" type="text" name="yourname">
                         </div>
-                        <div class="email"><label for="mail">Email</label>
-                            <input id="mail" type="email" name="mail">
+                        <div class="email font"><label for="mail">Email</label>
+                            <input class="area" id="mail" type="email" name="mail">
                         </div>
-                        <div class="tel"><label for="Tel">Tel</label>
-                            <input id="Tel" type="tel" name="tel">
+                        <div class="tel font"><label for="Tel">Tel</label>
+                            <input class="area" id="Tel" type="tel" name="tel">
                         </div>
-                        <div class="content"><label for="content">Content</label>
-                            <textarea id="content" type="text" name="yourname"></textarea>
+                        <div class="content font"><label for="content">Content</label>
+                            <textarea class="area" id="content" type="text" name="yourname"></textarea>
                         </div>
-                        <div>
-                            <input type="button" value="submit">
+                        <div id="btn">
+                            <input class="btn" type="button" value="submit">
                         </div>
                     </form>
 
                 </div>
-                <div class="forliver">
+                <div class="forliver for">
                     <h2>for Liver</h2>
                     <p>Do you wanna use whatsup?<br>
                         Click below!</p>
                     <div class="whatsapp display">
-                        <img src="./img/arrow_01.png" alt="">
-                        <img src="./img/whatsapp_PNG18.png" alt="">
+                        <div class="mark"><img class="img1" src="./img/arrow_01.png" alt=""></div>
+                        <div class="app"><img class="img2" src="./img/whatsapp_PNG18.png" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -303,9 +306,9 @@
         <section id="company">
             <h2>Company</h2>
             <div class="company display">
-                <div>
-                    <h2>LIVERS WALL</h2>
-                    <h3>Details</h3>
+                <div class="companyleft">
+                    <h3>LIVERS WALL</h3>
+                    <h4>Details</h4>
                     <p>
                         CEO : Cat lover Jennifer <br>
                         tel : pets.lover@liverswall.com <br>
@@ -316,10 +319,7 @@
                     </p>
                 </div>
                 <div class="map">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.311523013411!2d127.75606202013135!3d26.316410283368153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e513051b6aba63%3A0x758d0e90af22e324!2z5YyX6LC355S6576O5rWc44Oh44OH44Kj44Ki44K544OG44O844K344On44Oz!5e0!3m2!1sja!2sjp!4v1665646742761!5m2!1sja!2sjp"
-                        width="787" height="723" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.31954026505!2d127.75574976531318!3d26.31615058338822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e513051b6aba63%3A0x758d0e90af22e324!2z5YyX6LC355S6576O5rWc44Oh44OH44Kj44Ki44K544OG44O844K344On44Oz!5e0!3m2!1sja!2sjp!4v1665801373534!5m2!1sja!2sjp" width="393" height="361" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
             </div>
@@ -329,6 +329,7 @@
     <footer>
         <p>All rights reserved by Liver wall</p>
     </footer>
+
 
 
 
