--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         <section class="PetLivers">
             <h2 class="petlivers-title">Pet Livers</h2>
             <div class="PetLivers-content">
-                <div class="petliverswrap">
+                <div class="petliverswrap1">
                     <div class="PetLivers-box box1">
                         <img src="./img/liver_01.jpg" alt="liver_01">
-                        
+
                         <p class="txtLivers">Liver</p>
                         <p class="txtName">Alice</p>
                         <p class="txtComent">There is no gain without pain</p>
@@ -86,6 +86,8 @@
                         <p class="txtName">Oscar</p>
                         <p class="txtComent">They can tell when you are lying. It is the smell of guilty.</p>
                     </div>
+                </div>
+                <div class="petliverswrap2">
                     <div class="PetLivers-box box5">
                         <img src="./img/liver_08.jpg" alt="liver_05">
                         <p class="txtLivers">Liver</p>
@@ -112,52 +114,71 @@
                     </div>
                 </div>
             </div>
+            </div>
         </section>
 
         <!-- セクションAbout -->
         <section class="About">
-            <h2>About</h2>
-            <div class="display">
-                <div class="textblock">
-                    <p class="AboutText">About us</p>
-                    <p class="AboutText-content textcontent1">
-                        We are a company that started with a <br>
-                        simple idea of “Having fun with your pet”. <br>
-                        As we could see, not only sharing those <br>
-                        joyfull moments was enough for the <br>
-                        audience. They wanted to participate, <br>
-                        being present at the moment. That is <br>
-                        what we made come true
-                    </p>
-                </div>
-                <img class="aboutimg About-img1" src="./img/about_01.jpg" alt="aboutimg1">
-            </div>
+            <h2 class="about-title">About</h2>
+            <div class="about-content">
+                <!-- <div class="about-pattern"> -->
+                    <img class="pattern pattern1" src="./img/deco_01.png" alt="">
+                    <img class="pattern pattern2" src="./img/deco_02.png" alt="">
+                    <img class="pattern pattern3" src="./img/deco_03.png" alt="">
+                    <img class="pattern pattern4" src="./img/deco_04.png" alt="">
+                    <img class="pattern pattern5" src="./img/deco_05.png" alt="">
+                    <img class="pattern pattern6" src="./img/deco_06.png" alt="">
+                <!-- </div> -->
 
-            <div class="display">
-                <img class="aboutimg About-img2" src="./img/about_02.jpg" alt="aboutimg2">
-                <div class="textblock">
-                    <p class="AboutText">No. 1 customer support</p>
-                    <p class="AboutText-content textcontent2">
-                        We know you are not a proffesional liver. <br>
-                        You are an animal lover and that is why <br>
-                        we are here to support you. We have 24 <br>
-                        hours technical support about the <br>
-                        platform, seminars , and how you can <br>
-                        improve your performance.
-                    </p>
+                <div class="display">
+                    <div class="textblock">
+                        <p class="AboutText">About us</p>
+                        <p class="AboutText-content textcontent1">
+                            We are a company that started with a <br>
+                            simple idea of “Having fun with your pet”. <br>
+                            As we could see, not only sharing those <br>
+                            joyfull moments was enough for the <br>
+                            audience. They wanted to participate, <br>
+                            being present at the moment. That is <br>
+                            what we made come true
+                        </p>
+                    </div>
+                    <div class="aboutimg aboutbgimg1">
+                        <img class="About-img1" src="./img/about_01.jpg" alt="aboutimg1">
+                    </div>
                 </div>
+
+                <div class="display">
+                    <div class="aboutimg aboutbgimg2">
+                        <img class="About-img2" src="./img/about_02.jpg" alt="aboutimg2">
+                    </div>
+                    <div class="textblock">
+                        <p class="AboutText">No. 1 customer support</p>
+                        <p class="AboutText-content textcontent2">
+                            We know you are not a proffesional liver. <br>
+                            You are an animal lover and that is why <br>
+                            we are here to support you. We have 24 <br>
+                            hours technical support about the <br>
+                            platform, seminars , and how you can <br>
+                            improve your performance.
+                        </p>
+                    </div>
+                </div>
+
+
+
             </div>
         </section>
 
         <section class="Sponser">
-            <h2>Sponser</h2>
+            <h2 class="Sponser-title">Sponser</h2>
             <img class="sponser-img1" src="./img/animalprotection.jpg" alt="animalprotection-img">
             <img class="sponser-img2" src="./img/animal_foundation.jpg" alt="animalfoundation-img">
             <p class="sponserText">Liver Wall is sponser of animal protection association.</p>
         </section>
 
-         <!-- ここから中村 -->
-         <section id="service">
+        <!-- ここから中村 -->
+        <section id="service">
             <h2>Service</h2>
             <div class="boxs display">
                 <div class="boxright box">
@@ -319,7 +340,10 @@
                     </p>
                 </div>
                 <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.31954026505!2d127.75574976531318!3d26.31615058338822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e513051b6aba63%3A0x758d0e90af22e324!2z5YyX6LC355S6576O5rWc44Oh44OH44Kj44Ki44K544OG44O844K344On44Oz!5e0!3m2!1sja!2sjp!4v1665801373534!5m2!1sja!2sjp" width="393" height="361" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.31954026505!2d127.75574976531318!3d26.31615058338822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e513051b6aba63%3A0x758d0e90af22e324!2z5YyX6LC355S6576O5rWc44Oh44OH44Kj44Ki44K544OG44O844K344On44Oz!5e0!3m2!1sja!2sjp!4v1665801373534!5m2!1sja!2sjp"
+                        width="393" height="361" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
             </div>
