--- a/index.html
+++ b/index.html
@@ -183,50 +183,62 @@
                 <div class="boxright box">
                     <div class="imgbox">
                         <img class="boximg " src="./img/icon_01.png" alt="">
-                        <h3>Do you wanna be on TV?</h3>
-                        <p>We have strong connections with the <br>
-                            media so there are plenty of <br>
-                            oportunities to be famous too!</p>
+                        <div>
+                            <h3>Do you wanna be on TV?</h3>
+                            <p>We have strong connections with the <br>
+                                media so there are plenty of <br>
+                                oportunities to be famous too!</p>
+                        </div>
                     </div>
                     <div class="imgbox">
                         <img class="boximg" src="./img/icon_02.png" alt="">
-                        <h3>Even during the event we got your back</h3>
-                        <p>You can ask for support during your live <br>
-                            session! there will for sure a response <br>
-                            within 15 minutes after your request.</p>
+                        <div>
+                            <h3>Even during the event we got your back</h3>
+                            <p>You can ask for support during your live <br>
+                                session! there will for sure a response <br>
+                                within 15 minutes after your request.</p>
+                        </div>
                     </div>
                     <div class="imgbox">
                         <img class="boximg" src="./img/icon_03.png" alt="">
-                        <h3>Need legal support?</h3>
-                        <p>We got your back here too! <br>
-                            If you are struggling paying taxes <br>
-                            or organizing your incomes, we <br>
-                            have expert lawyers and <br>
-                            accountants that can help you</p>
+                        <div>
+                            <h3>Need legal support?</h3>
+                            <p>We got your back here too! <br>
+                                If you are struggling paying taxes <br>
+                                or organizing your incomes, we <br>
+                                have expert lawyers and <br>
+                                accountants that can help you</p>
+                        </div>
                     </div>
                 </div>
                 <div class="boxcenter box">
                     <div class="imgbox">
                         <img src="./img/icon_04.png" alt="">
-                        <h3>Fully support</h3>
-                        <p>Your audience is not increasing as it <br>
-                            was expected? we give you free pass <br>
-                            to consult our marketing experts and <br>
-                            ask for advice</p>
+                        <div>
+                            <h3>Fully support</h3>
+                            <p>Your audience is not increasing as it <br>
+                                was expected? we give you free pass <br>
+                                to consult our marketing experts and <br>
+                                ask for advice</p>
+                        </div>
                     </div>
                     <div class="imgbox">
                         <img src="./img/icon_05.png" alt="">
-                        <h3>Connection</h3>
-                        <p>You are also able to connect with <br>
-                            other livers and pets to interact with <br>
-                            them and also make new friends!</p>
+                        <div>
+                            <h3>Connection</h3>
+                            <p>You are also able to connect with <br>
+                                other livers and pets to interact with <br>
+                                them and also make new friends!</p>
+                        </div>
                     </div>
                     <div class="imgbox">
                         <img src="./img/icon_06.png" alt="">
-                        <h3>Customer satisfaction</h3>
-                        <p>You can see the data of your <br>
-                            customer in the platform, analyze it <br>
-                            and prepare for the next session</p>
+                        <div>
+                            <h3>Customer satisfaction</h3>
+                            <p>You can see the data of your <br>
+                                customer in the platform, analyze it <br>
+                                and prepare for the next session</p>
+                        </div>
                     </div>
 
                 </div>
@@ -234,39 +246,48 @@
                 <div class="boxleft box">
                     <div class="imgbox">
                         <img src="./img/icon_07.png" alt="">
-                        <h3>Free seminar</h3>
-                        <p>Every month we are holding <br>
-                            informative seminars where you can <br>
-                            get new information and also <br>
-                            improve your skills.</p>
+                        <div>
+                            <h3>Free seminar</h3>
+                            <p>Every month we are holding <br>
+                                informative seminars where you can <br>
+                                get new information and also <br>
+                                improve your skills.</p>
+                        </div>
                     </div>
                     <div class="imgbox">
                         <img src="./img/icon_08.png" alt="">
-                        <h3>Good competition</h3>
-                        <p>Everybody needs a good rival to improve <br>
-                            yourself and here you got a lot! there are <br>
-                            reviews every month where you can see the <br>
-                            ranks of your popularity and get <br>
-                            motivated.</p>
+                        <div>
+                            <h3>Good competition</h3>
+                            <p>Everybody needs a good rival to improve <br>
+                                yourself and here you got a lot! there are <br>
+                                reviews every month where you can see the <br>
+                                ranks of your popularity and get <br>
+                                motivated.</p>
+                        </div>
                     </div>
                     <div class="imgbox">
                         <img src="./img/icon_09.png" alt="">
-                        <h3>Free counseling</h3>
-                        <p>Whatever and whenever you have a <br>
-                            question, do not hesitate to call the <br>
-                            support center. We give fully attention <br>
-                            for 24 hours.</p>
+                        <div>
+                            <h3>Free counseling</h3>
+                            <p>Whatever and whenever you have a <br>
+                                question, do not hesitate to call the <br>
+                                support center. We give fully attention <br>
+                                for 24 hours.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+
         <section id="voice">
-            <h2>Custimer Voice</h2>
+            <h2>Customer Voice</h2>
             <div class="v-container display">
 
-                <img src="./img/voice_01.jpg" alt="">
+                <div class="voiceright">
+                    <img src="./img/voice_01.jpg" alt="">
+                </div>
 
-                <div>
+                <div class="voiceleft">
                     <p class="text1">Actual liver　Anna　</p>
 
 
@@ -282,7 +303,10 @@
                         someone by giving them a litle time of <br>
                         joy. </p>
                 </div>
-
+                <img class="back deko1" src="./img/deco_07.png" alt="">
+                <img class="back deko2" src="./img/deco_08.png" alt="">
+                <img class="back deko3" src="./img/deco_09.png" alt="">
+                <img class="back deko4" src="./img/deco_10.png" alt="">
             </div>
         </section>
         <section id="contact">
@@ -316,9 +340,8 @@
                     <p>Do you wanna use whatsup?<br>
                         Click below!</p>
                     <div class="whatsapp display">
-                        <div class="mark"><img class="img1" src="./img/arrow_01.png" alt=""></div>
-                        <div class="app"><img class="img2" src="./img/whatsapp_PNG18.png" alt=""></div>
-                    </div>
+                        <img class="img1" src="./img/arrow_01.png" alt="">
+                        <img class="img2" src="./img/whatsapp_PNG18.png" alt="">
                 </div>
             </div>
         </section>
