--- a/index.html
+++ b/index.html
@@ -129,38 +129,40 @@
                 <img class="pattern pattern6" src="./img/deco_06.png" alt="">
                 <!-- </div> -->
 
-                <div class="display">
-                    <div class="textblock">
-                        <p class="AboutText">About us</p>
-                        <p class="AboutText-content textcontent1">
-                            We are a company that started with a <br>
-                            simple idea of “Having fun with your pet”. <br>
-                            As we could see, not only sharing those <br>
-                            joyfull moments was enough for the <br>
-                            audience. They wanted to participate, <br>
-                            being present at the moment. That is <br>
-                            what we made come true
-                        </p>
+                <div class="maxwidth">
+                    <div class="display">
+                        <div class="textblock">
+                            <p class="AboutText">About us</p>
+                            <p class="AboutText-content textcontent1">
+                                We are a company that started with a <br>
+                                simple idea of “Having fun with your pet”. <br>
+                                As we could see, not only sharing those <br>
+                                joyfull moments was enough for the <br>
+                                audience. They wanted to participate, <br>
+                                being present at the moment. That is <br>
+                                what we made come true
+                            </p>
+                        </div>
+                        <div class="aboutimg aboutbgimg1">
+                            <img class="About-img1" src="./img/about_01.jpg" alt="aboutimg1">
+                        </div>
                     </div>
-                    <div class="aboutimg aboutbgimg1">
-                        <img class="About-img1" src="./img/about_01.jpg" alt="aboutimg1">
-                    </div>
-                </div>
 
-                <div class="display">
-                    <div class="aboutimg aboutbgimg2">
-                        <img class="About-img2" src="./img/about_02.jpg" alt="aboutimg2">
-                    </div>
-                    <div class="textblock">
-                        <p class="AboutText">No. 1 customer support</p>
-                        <p class="AboutText-content textcontent2">
-                            We know you are not a proffesional liver. <br>
-                            You are an animal lover and that is why <br>
-                            we are here to support you. We have 24 <br>
-                            hours technical support about the <br>
-                            platform, seminars , and how you can <br>
-                            improve your performance.
-                        </p>
+                    <div class="display">
+                        <div class="aboutimg aboutbgimg2">
+                            <img class="About-img2" src="./img/about_02.jpg" alt="aboutimg2">
+                        </div>
+                        <div class="textblock">
+                            <p class="AboutText">No. 1 customer support</p>
+                            <p class="AboutText-content textcontent2">
+                                We know you are not a proffesional liver. <br>
+                                You are an animal lover and that is why <br>
+                                we are here to support you. We have 24 <br>
+                                hours technical support about the <br>
+                                platform, seminars , and how you can <br>
+                                improve your performance.
+                            </p>
+                        </div>
                     </div>
                 </div>
 
@@ -342,8 +344,8 @@
                     <div class="whatsapp display">
                         <img class="img1" src="./img/arrow_01.png" alt="">
                         <img class="img2" src="./img/whatsapp_PNG18.png" alt="">
+                    </div>
                 </div>
-            </div>
         </section>
 
         <section id="company">
